main: Try harder to get the mime-type for a remote file

Trying to parse http://faif.us/feeds/cast-mp3/ will fail because
the web server only returns the data line-by-line.

https://bugzilla.gnome.org/show_bug.cgi?id=634770